dataset1235/2025-2/805158916/users/566502422/executions/2118643220_2249045874.log
== RUN (2025-09-01 14:10:40)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input("digite o valor do lado:"))
import math
apotema = lado / 2*math.tan(math.pi/8)
area = 4*lado*apotema
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
digite o valor do lado:
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
digite o valor do lado:
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
digite o valor do lado:
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
digite o valor do lado:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:10:18)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input("digite o valor do lado:"))
apotema = lado / 2*math.tan(math.pi/8)
area = 4*lado*apotema
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / 2*math.tan(math.pi/8)
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / 2*math.tan(math.pi/8)
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / 2*math.tan(math.pi/8)
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / 2*math.tan(math.pi/8)
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / 2*math.tan(math.pi/8)
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / 2*math.tan(math.pi/8)
                       ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:11:09)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input("digite o valor do lado:"))
import math
apotema = lado / 2*math.tan(math.pi/8)
area = 4*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
digite o valor do lado:13.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
digite o valor do lado:53.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:20.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:20.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
digite o valor do lado:67.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
digite o valor do lado:29.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:13:46)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input("digite o valor do lado:"))
import math
apotema = lado / (2*(math.tan(math.pi/8)))
area = 4*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
digite o valor do lado:77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
digite o valor do lado:309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
digite o valor do lado:391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
digite o valor do lado:173.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:12:42)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input("digite o valor do lado:"))
import math
apotema = lado / 2*(math.tan(math.pi/8))
area = 4*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
digite o valor do lado:13.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
digite o valor do lado:53.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:20.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:20.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
digite o valor do lado:67.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
digite o valor do lado:29.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:13:36)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input("digite o valor do lado:"))
import math
apotema = lado / (2*(math.tan(math.pi/8)))
area = 4*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
digite o valor do lado:77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
digite o valor do lado:309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
digite o valor do lado:120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
digite o valor do lado:391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
digite o valor do lado:173.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
